Integrate supabase into api
